# ethans-degenerate-delay

.github/workflows/: main.yml
EthansDegenDelay-GitHub/EthansDegenDelay/: CMakeLists.txt  README.md
EthansDegenDelay-GitHub/EthansDegenDelay/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
